<resources>
    <string name="app_name">草原の工房</string>
    <string name="showTimelineButton">更新</string>
    <string name="displayName">カピバラのビット</string>
    <string name="screenName">bithitkit</string>
    <string name="timelineTweet">140字までツイートできます140字までツイートできます140字までツイートできます140字までツイートできます140字までツイートできます140字までツイートできます140字までツイートできます</string>
    <string name="icon">icon</string>
    <string name="submitTweetButton">POST</string>
    <string name="countTweetCharacter">0</string>
    <string name="newTweetArea" />
    <string name="countNewTweet">0</string>
    <string name="favoriteButton">いいね</string>
    <string name="replyButton">返信</string>
    <string name="favoriteStatus">favoriteStatus</string>
    <string name="deleteTweetButton">deleteTweetButton</string>
    <string name="newTweetButton">newTweetButton</string>
    <string name="showMentionsButton">showMentionsButton</string>
    <string name="quoteButton">quoteButton</string>
    <string name="homeTab">ホーム</string>
    <string name="mentionTab">メンション</string>
</resources>