<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/timelineIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/icon"
            android:paddingStart="0dp"
            android:paddingEnd="3dp"
            tools:ignore="ImageContrastCheck" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/displayName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/displayName" />

            <TextView
                android:id="@+id/screenName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/screenName"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/timelineTweet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timelineTweet" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/favoriteStatusIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="3dp"
        android:contentDescription="@string/favoriteStatus"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_favorite_12" />

    <ImageButton
        android:id="@+id/deleteTweetButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@null"
        android:contentDescription="@string/deleteTweetButton"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@id/linearLayout"
        app:srcCompat="@drawable/ic_baseline_delete_24" />
</androidx.constraintlayout.widget.ConstraintLayout>