<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewTweetActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/submitTweetButton"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:text="@string/submitTweetButton" />
        </LinearLayout>

        <EditText
            android:id="@+id/newTweetArea"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/newTweetArea"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/countNewTweet"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/countNewTweet"
            android:gravity="end|top"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>